--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,18 +1,16 @@
-<div class="container mt-5"> 
-  
-  <div class="row">
-    <div class="col-md-8">.col-md-8</div>
-    <div class="col-md-4">
-      <app-formulario></app-formulario>
+<div class="container mt-5">
+
+    <div class="row">
+        <div class="col-md-8">.col-md-8</div>
+        <div class="col-md-4">
+            <app-formulario></app-formulario>
+        </div>
     </div>
-  </div>
-  <router-outlet></router-outlet>
-  <ul>
-    <li class="text" *ngFor="let usuario of usuarios | async">
-      {{usuario.nombre}} 
-    </li>
-  </ul>
+    <router-outlet></router-outlet>
+    <ul>
+        <li class="text" *ngFor="let usuario of usuarios | async">
+            {{usuario.nombre}}
+        </li>
+    </ul>
 </div>
-
-
-
+<app-code-authentication></app-code-authentication>
