--- a/my-app/src/app/code-authentication/code-authentication.component.html
+++ b/my-app/src/app/code-authentication/code-authentication.component.html
@@ -18,5 +18,7 @@
 
         <button (click)="verifyLoginCode()">Verify</button>
     </div>
+  
 
 </div>
+<button (click)="signOut()">Sing Out</button>
