--- a/my-app/src/app/formulario/formulario.component.html
+++ b/my-app/src/app/formulario/formulario.component.html
@@ -101,7 +101,7 @@
       </div>
     </div>
   </div>
-  <button class="btn btn-primary" type="submit">Sing Up</button>
+  <button class="btn btn-primary" type="submit" [routerLink]="['/phone-auth']">Sing Up</button>
 </form>
 
 <script>
