Cambios en el diseño visual de componentes

--- a/my-app/src/app/consignacion/consignacion.component.html
+++ b/my-app/src/app/consignacion/consignacion.component.html
@@ -1,3 +1,9 @@
-<p>
-  consignacion works!
-</p>
+<div class="card mx-auto">
+    <div class="card-body">
+      <h5 class="card-title">Consignación</h5>
+      <input type="number" id="cantidadRetiro" placeholder="Cantidad">      
+    </div>
+    <div class="card-body">
+      <a href="#" class="btn btn-primary">Consignar</a>
+    </div>
+</div>
