--- a/my-app/src/app/transferencias/transferencias.component.html
+++ b/my-app/src/app/transferencias/transferencias.component.html
@@ -1,3 +1,12 @@
-<p>
-  transferencias works!
-</p>
+<div class="card mx-auto">
+    <div class="card-body">
+      <h5 class="card-title">Transferencia</h5>
+      <input type="text" id="cantidadRetiro" placeholder="Cuenta de destino">      
+    </div>
+    <div class="card-body">
+        <input type="text" id="cantidadRetiro" placeholder="Cantidad">
+      </div>
+    <div class="card-body">
+      <a href="#" class="btn btn-primary">Transferir</a>
+    </div>
+</div>
