--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -122,7 +122,7 @@
 
 
 <!-- ahora se configura lo del phone code y el recaptcha   -->
-<button (click)="sendVerificationCode()">Verify</button>
+<!-- <button (click)="sendVerificationCode()">Verify</button> -->
 
 
 <div id="recaptcha-container"></div>
