Creación vista admin

--- a/src/app/mat-toolbar/mat-toolbar.component.html
+++ b/src/app/mat-toolbar/mat-toolbar.component.html
@@ -5,6 +5,7 @@ style="min-height: 50px !important; height: 50px !important;">
   <a mat-button [routerLink]="['/consignacion']">Consignación</a>
   <a mat-button [routerLink]="['/transferencias']">Transferencias</a>
   <span class="fill-space"></span>
+  <a mat-button [routerLink]="['/admin']">Vista Admin</a>
   <a mat-button [routerLink]="['']">Cerrar Sesión</a>
 </mat-toolbar>
 <ng-content></ng-content>
