--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -21,7 +21,7 @@
                                 </form>
 
                                 <div class="form-group">
-                                    <a routerLink="/user/register" class="form-control login-user">No tienes cuenta ?</a>
+                                    <a routerLink="/register" class="form-control login-user">No tienes cuenta ?</a>
                                 </div>
                             </form>
                         </div>
@@ -31,7 +31,7 @@
         </div>
 
 
-       
+
         <div *ngIf="userExist">
             <hr>
             <label for="code">Ingrese código de verificación</label><br>
