--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -7,8 +7,9 @@
         </div>
     </div>
     <ul>
-        <li class="text" *ngFor="let usuario of usuarios | async">
-            {{usuario.nombre}}
+            <!-- *ngFor="let usuario of usuarios | async" -->
+        <li class="text" >
+            <!-- {{usuario.nombre}} -->
         </li>
     </ul>
 </div>
